Security Patch Version Update 3.0.6 -> 3.1.0